--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@typescript-eslint/parser": "^6.16.0",
         "eslint": "^8.56.0",
         "prettier": "^3.1.1",
+        "ts-node": "^10.9.2",
         "typescript": "^5.3.3"
     },
     "dependencies": {
